--- a/vmCloneUbuntu.yml
+++ b/vmCloneUbuntu.yml
@@ -26,7 +26,8 @@
       datacenter: '{{ datacenter_name }}'
       cluster: '{{ cluster_name }}'
       customization:
-        - dns_servers: 172.16.20.101
+        dns_servers:
+        - 172.16.20.101
       networks:
         - name: 'CG61|CL-PODS|EPG_{{ u_branch }}'
           type: static
