--- a/nso-cl2022.yaml
+++ b/nso-cl2022.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
         - name: nso-podx
-          image: jc3943/jc3943/nso-sys:nso-care-demo-v1
+          image: jc3943/nso-sys:nso-care-demo-v1
           command: ["/bin/bash","-c","/etc/init.d/ncs start && /bin/sleep 3650d"]
           imagePullPolicy: "Always"
 ---
